--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,27 @@
             margin: 0 auto;
             padding: 20px;
         }
+        /* Binance Widget Container Styles */
+        .binance-widget-marquee {
+            position: fixed; /* Fixes the widget in place */
+            top: 0; /* Aligns the widget to the top of the viewport */
+            z-index: 1000; /* Ensure it appears above other content */
+            width: 100%; /* Optional: makes the widget span the full width of the viewport */
+        }
     </style>
+    <script src="https://public.bnbstatic.com/unpkg/growth-widget/cryptoCurrencyWidget@0.0.13.min.js"></script>
 </head>
 <body>
     <!-- React App will render here -->
     <div id="root"></div>
+
+    <!-- Binance Widget -->
+    <div class="binance-widget-marquee" 
+         data-cmc-ids="1,1027,1839,5426,3408,52,74,5805,3890,7083,5994,11419"
+         data-theme="dark" 
+         data-transparent="false" 
+         data-powered-by="Powered by" 
+         data-disclaimer="Disclaimer">
+    </div>
 </body>
 </html>
